# shvim

./: CMakeLists.txt  README.md  sample-vi.txt
src/: debug.c  debug.h  main.c  mod.vim  vi.c  vi.h
tk/: CMakeLists.txt  tk.c
tk/include/tk/: tk.h  tkapp.h  tkmenu.h
tk/src/: tkapp.c
tools/: make-mod-vim
